Adding more work section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <b>Pranesh</b>. A passionate UI designer and a Full-Stack developer from Chennai, India.
         </p>
         <p class="info">
-          I've 3 years of experience designing and building highly scalable web applications. I mostly work with React JS, Node JS
+          I've 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS
           and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
           like GoCD and Travis. I care a lot about user experience, minimalizm, reusability and clean code.
         </p>
         <p class="info">
-          Currently, I design and develop cutting edge web applications with a
-          group of brilliant people at <a href="//indix.com" target="_blank">Indix</a>. Drop me a
-          <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunity.
+          Currently, I design and develop complex web applications with a
+          group of brilliant people at <a href="https://indix.com" target="_blank">Indix</a>. Drop me a
+          <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunities.
         </p>
       </div>
       <div class="links">
@@ -148,7 +148,7 @@
                 <img src="/img/statements.png" alt="Pixel 2 landing page">
               </div>
               <div class="details">
-                <div class="title">Statements</div>
+                <div class="title">Statement</div>
                 <div class="description">
                   Webapp concept where you can check your online spendings in detail. Provided
                   with historical data and much more, you'll be able to track your spendings
@@ -172,6 +172,15 @@
             </div>
           </div>
         </div>
+        <img src="/img/divider.svg" alt="divider" class="divider">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="more">
+              More work on <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble ⇾</a> and
+              <a href="https://github.com/praneshr" id="git" target="_blank">Github ⇾</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -185,9 +194,12 @@
         </p>
         <p class="license">
           Hosted in Github Pages. Code is licensed under
-          <b>MIT</b> and open-sourced at <a href="https://github.com/praneshr/praneshr.github.io" target="_blank">Github</a>.
+          <b>MIT</b> and available at <a href="https://github.com/praneshr/praneshr.github.io" target="_blank">Github</a>.
           All images/graphics are licensed under <b>CC BY-SA</b>
         </p>
+        <div class="copy">
+          &copy; 2018 Pranesh Ravi
+        </div>
       </div>
     </div>
   </div>
