Updating bio and adding alias

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <b>Pranesh</b>. A passionate UI designer and a Full-Stack developer from Chennai, India.
         </p>
         <p class="info">
-          I've 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS
-          and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
+          I've 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS,
+          GraphQL and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
           like GoCD and Travis. I care a lot about user experience, minimalizm, reusability and clean code.
         </p>
         <p class="info">
@@ -122,7 +122,8 @@
               <div class="details">
                 <div class="title">Pixel 2 Landing Page</div>
                 <div class="description">
-                  Concept for Pixel 2 website. A good mix of bold blue color and subtle pattern.
+                  Concept for Pixel 2 website. A good mix of bold blue color and subtle pattern to bring
+                  a fancy yet minimal UI focusing on selling the product.
                 </div>
               </div>
             </div>
@@ -166,7 +167,7 @@
                 <div class="title">Enai Noki Paayum Data</div>
                 <div class="description">
                   Local swag made at Indix, mimicked from the movie <i>"Enai Noki Paayum Thota"</i>. This means,
-                  an unstoppable amount of data is forcing towards me, which is what we solve at work daily.
+                  a huge amount of data is forcing towards me, which is what we solve at work everyday.
                 </div>
               </div>
             </div>
