--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Chennai, India.
           </p>
           <p class="info">
-            I've 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS,
+            I have 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS,
             GraphQL and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
             like GoCD and Travis. I care a lot about user experience, minimalizm, reusability and clean code.
           </p>
@@ -196,12 +196,14 @@
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
-                <div class="image statements">
-                  <div class="hover">
-                    Visit Project ⇾
+                <a href="https://dribbble.com/shots/4562145-Statement" target="_blank">
+                  <div class="image statements">
+                    <div class="hover">
+                      Visit Project ⇾
+                    </div>
+                    <img src="/img/statements.png" alt="Statement">
                   </div>
-                  <img src="/img/statements.png" alt="Statement">
-                </div>
+                </a>
                 <div class="details">
                   <div class="title">Statement</div>
                   <div class="description">
@@ -237,7 +239,7 @@
             <div class="col-xs-12">
               <div class="more">
                 More work on <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble ⇾</a> and
-                <a href="https://github.com/praneshr" id="git" target="_blank">Github ⇾</a>
+                <a href="https://github.com/praneshr?utf8=%E2%9C%93&tab=repositories&q=&type=public&language=" id="git" target="_blank">Github ⇾</a>
               </div>
             </div>
           </div>
