--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pranesh Ravi">
-    <meta name="description" content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix">
+    <meta name="description" content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix">
 
     <meta name="twitter:card" value="summary_large_image">
     <meta name="twitter:site" value="@pranesh_ravi">
     <meta name="twitter:creator" value="@pranesh_ravi">
     <meta name="twitter:title" content="Pranesh Ravi">
-    <meta name="twitter:description" content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix">
+    <meta name="twitter:description" content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix">
     <meta name="twitter:image" content="//praneshravi.in/img/meta.png">
 
     <meta content="Pranesh Ravi" property="og:site_name">
     <meta content="Pranesh Ravi" property="og:title">
-    <meta content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix" property="og:description">
+    <meta content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix" property="og:description">
     <meta content="website" property="og:type">
     <meta content="//praneshravi.in" property="og:url">
     <meta content="//praneshravi.in/img/meta.png" property="og:image" />
@@ -28,6 +28,14 @@
     <title>Pranesh Ravi | UI Designer & Full Stack Developer</title>
     <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
     <link rel="stylesheet" href="/dist/index.css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-53857863-4', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
 
   <body>
