--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class="footer">
           <img src="/img/profile.jpg" alt="Profile">
           <p class="credit">
-            Designed and devloped by Pranesh
+            Designed and developed by Pranesh
           </p>
           <p class="license">
             Hosted in Github Pages. Code is licensed under
