--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p class="info">
             I have 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS,
             GraphQL and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
-            like GoCD and Travis. I care a lot about user experience, minimalizm, reusability and clean code.
+            like GoCD and Travis. I care a lot about user experience, minimalism, reusability and clean code.
           </p>
           <p class="info">
             Currently, I design and develop complex web applications with a
