Fixing meta url

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta name="twitter:creator" value="@pranesh_ravi">
     <meta name="twitter:title" content="Pranesh Ravi">
     <meta name="twitter:description" content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix">
-    <meta name="twitter:image" content="//praneshravi.in/img/meta.png">
+    <meta name="twitter:image" content="https://praneshravi.in/img/meta.png">
 
     <meta content="Pranesh Ravi" property="og:site_name">
     <meta content="Pranesh Ravi" property="og:title">
     <meta content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix" property="og:description">
     <meta content="website" property="og:type">
-    <meta content="//praneshravi.in" property="og:url">
-    <meta content="//praneshravi.in/img/meta.png" property="og:image" />
+    <meta content="https://praneshravi.in" property="og:url">
+    <meta content="https://praneshravi.in/img/meta.png" property="og:image" />
 
     <meta name="theme-color" content="#FFFFFF">
     <meta name="msapplication-navbutton-color" content="#FFFFFF">
