--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
                 <div class="details">
                   <div class="title">Enai Noki Paayum Data</div>
                   <div class="description">
-                    Local swag made at Indix, mimicked from the movie <i>"Enai Noki Paayum Thota"</i>. This means,
-                    a huge amount of data is forcing towards me, which is what we solve at work everyday.
+                    Local swag made at Indix, mimicked from the movie <i>"Enai Noki Paayum Thota"</i>.
                   </div>
                 </div>
               </div>
