Adding OPL ribbon

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         </div>
         <img src="/img/divider.svg" alt="divider" class="divider">
         <div class="about">
+          <a href="https://onepagelove.com/pranesh-ravi-2018" target="_blank">
+            <img src="https://s3.amazonaws.com/onepagelove/one-page-love-award-retina-right.png" alt="Ribbon" id="opl">
+          </a>
           <p class="intro">
             Hello, my name is
             <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Chennai, India.
