Updating module name

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </div>
                 </a>
                 <div class="details">
-                  <div class="title">React Forms</div>
+                  <div class="title">Formland</div>
                   <div class="description">
                     A powerful, extensible, config based form generator for React. The idea of this project is to bring non Javascript developers and Javascript
                     closer.
