Update logo and link

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
-                <a href="https://github.com/praneshr/react-forms" target="_blank">
+                <a href="https://github.com/indix/formland" target="_blank">
                   <div class="image r">
                     <div class="hover">
                       Visit Project ⇾
                     </div>
-                    <img src="/img/forms.png" alt="React Forms">
+                    <img src="/img/formland.png" alt="React Forms">
                   </div>
                 </a>
                 <div class="details">
