--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@
             <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Chennai, India.
           </p>
           <p class="info">
-            I have 3 years of experience in designing and building highly scalable web applications. I mostly work with React JS, Node JS,
+            I have 4 years of experience in designing and building highly scalable web applications. I mostly work with JavaScript, React JS, Node JS,
             GraphQL and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
             like GoCD and Travis. I care a lot about user experience, minimalism, reusability and clean code.
           </p>
           <p class="info">
-            Currently, I design and develop complex web applications with a
-            group of brilliant people at <a href="https://indix.com" target="_blank">Indix</a>. Drop me a
-            <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunities.
+            Currently, I work for <a href="https://about.google/" target="_blank">Google</a> as a UX Engineer. Drop me a
+            <a href="mailto:talkto@praneshravi.in">mail</a> if you have any interesting projects for me.
           </p>
         </div>
         <div class="links">
@@ -276,7 +275,7 @@
             All images/graphics are licensed under <b>CC BY-SA</b>
           </p>
           <div class="copy">
-            &copy; 2018 Pranesh Ravi
+            &copy; 2019 Pranesh Ravi
           </div>
         </div>
       </div>
