--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </p>
           <p class="info">
             Currently, I work for <a href="https://about.google/" target="_blank">Google</a> as a UX Engineer. Drop me a
-            <a href="mailto:talkto@praneshravi.in">mail</a> if you have any interesting projects for me.
+            <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunities. 
           </p>
         </div>
         <div class="links">
