--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </a>
           <p class="intro">
             Hello, my name is
-            <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Chennai, India.
+            <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Bengaluru, India.
           </p>
           <p class="info">
             I have 4 years of experience in designing and building highly scalable web applications. I mostly work with JavaScript, React JS, Node JS,
