--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
-                <a href="https://themovientv.com" target="_blank">
+                <a href="https://github.com/praneshr/movie-n-tv" target="_blank">
                   <div class="image m">
                     <div class="hover">
                       Visit Project ⇾
