--- a/index.html
+++ b/index.html
@@ -68,30 +68,34 @@
           </a>
           <p class="intro">
             Hello, my name is
-            <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Bengaluru, India.
+            <b>Arya Soni</b>. A passionate UI designer and a Full Stack developer from Delhi/Gurgaon, India.
           </p>
           <p class="info">
-            I have 4 years of experience in designing and building highly scalable web applications. I mostly work with JavaScript, React JS, Node JS,
-            GraphQL and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
-            like GoCD and Travis. I care a lot about user experience, minimalism, reusability and clean code.
+            I'm a 20-year-old developer based in Delhi.
+            I specialize in JavaScript and my main area of interest is Front-End Development.
+            I love developing tools/sites/apps that solve real problems or help make someone's life easier.
+            I like impactful work.
           </p>
+          <p><b>Skills</b></p><br>
           <p class="info">
-            Currently, I work for <a href="https://about.google/" target="_blank">Google</a> as a UX Engineer. Drop me a
-            <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunities. 
+            My current skill set includes JavaScript, React, Redux, Firebase, SASS, Bootstrap, CSS, HTML etc. And that's excluding all the common (yet sometimes complex) build/workflow tools like Webpack, Babel etc.
+            However, I believe in tool agnostic skills. Being in an industry that moves at the speed of time, it sometimes doesn't matter what frameworks/tools I'm familiar with. Because tools/frameworks are so fickle these days that they can become obsolete within months! What matters more is how fast can I learn and make myself comfortable with newer technology. I believe I'm a quick learner. I prioritize concepts over techniques.
+            Simplicity, though overused (and sometimes misused) as a term, is something I really value. I like to build solutions that are simple yet interactive for the users.
+             Besides coding, I'm also very passionate about traveling and reading. I feel like the world is a book that was given to me for exploring when I was born, and I don't wanna die before reading all the pages. I plan to become a nomad someday and explore the endless beauty that this planet homes.
           </p>
         </div>
         <div class="links">
           <div class="row">
             <div class="col-xs-12">
-              <a href="https://github.com/praneshr" id="git" target="_blank">Github</a>
-              <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble</a>
-              <a href="https://blog.praneshravi.in/" id="medium" target="_blank">Medium</a>
-              <a href="https://stackoverflow.com/users/4945468/pranesh-ravi" id="so" target="_blank">Stackoverflow</a>
-              <a href="https://www.linkedin.com/in/pranesh-ravi/" id="lki" target="_blank">LinkedIn</a>
+              <a href="https://github.com/aryasoni98" id="git" target="_blank">Github</a>
+              <a href="https://dribbble.com/aryasoni98" id="dribbble" target="_blank">Dribbble</a>
+              <a href="https://medium.com/@ryss" id="medium" target="_blank">Medium</a>
+              <a href="https://twitter.com/aryasoni98" id="so" target="_blank">Twitter</a>
+              <a href="https://www.linkedin.com/in/aryasoni/" id="lki" target="_blank">LinkedIn</a>
             </div>
           </div>
         </div>
-        <div class="projects">
+<!--         <div class="projects">
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
@@ -111,8 +115,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            </div> -->
+<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project right">
                 <a href="https://github.com/praneshr/crypto-info" target="_blank">
                   <div class="image c">
@@ -131,8 +135,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
                 <a href="https://github.com/indix/formland" target="_blank">
@@ -151,8 +155,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            </div> -->
+<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project right">
                 <a href="https://oss.indix.com" target="_blank">
                   <div class="image i">
@@ -170,8 +174,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
                 <a href="https://dribbble.com/shots/3932225-Daily-UI-003" target="_blank">
@@ -190,8 +194,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            </div> -->
+<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project right">
                 <a href="https://dribbble.com/shots/3977109-Daily-UI-018-Analytics-Chart" target="_blank">
                   <div class="image h">
@@ -209,8 +213,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project left">
                 <a href="https://dribbble.com/shots/4562145-Statement" target="_blank">
@@ -230,8 +234,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            </div> -->
+<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project right">
                 <a href="https://dribbble.com/shots/4547975-Enai-Noki-Paayum-Data" target="_blank">
                   <div class="image e">
@@ -249,13 +253,13 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <img src="/img/divider.svg" alt="divider" class="divider">
           <div class="row">
             <div class="col-xs-12">
               <div class="more">
-                More work on <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble ⇾</a> and
-                <a href="https://github.com/praneshr?utf8=%E2%9C%93&tab=repositories&q=&type=public&language=" id="git" target="_blank">Github ⇾</a>
+                Social Networking <a href="https://www.instagram.com/a1s1cmd01/" id="dribbble" target="_blank">Instagram ⇾</a> and
+                <a href="https://www.facebook.com/a1s1cmd01/" id="git" target="_blank">Facebook ⇾</a>
               </div>
             </div>
           </div>
@@ -267,7 +271,7 @@
         <div class="footer">
           <img src="/img/profile.jpg" alt="Profile">
           <p class="credit">
-            Designed and developed by Pranesh
+            Designed and developed by Arya Soni
           </p>
           <p class="license">
             Hosted in Github Pages. Code is licensed under
