--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:creator" value="@aryasoni98">
     <meta name="twitter:title" content="Arya Soni">
     <meta name="twitter:description" content="Arya Soni | UI Designer & Full Stack Developer at Indix">
-    <meta name="twitter:image" content="https://praneshravi.in/img/meta.png">
+    <meta name="twitter:image" content="https://aryasoni98.github.io/img/meta.png">
 
     <meta content="Arya Soni" property="og:site_name">
     <meta content="Arya Soni" property="og:title">
