--- a/index.html
+++ b/index.html
@@ -35,14 +35,23 @@
     <title>Arya Soni | UI Designer & Full Stack Developer</title>
     <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
     <link rel="stylesheet" href="/dist/index.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-53857863-4', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148828294-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-148828294-1');
+      </script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-3496411678105692",
+          enable_page_level_ads: true
+        });
+      </script>
+
   </head>
 
   <body>
