--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             I love developing tools/sites/apps that solve real problems or help make someone's life easier.
             I like impactful work.
           </p>
-          <p><b>Skills</b></p><br>
+          <p><b>Skills</b></p>
           <p class="info">
             My current skill set includes JavaScript, React, Redux, Firebase, SASS, Bootstrap, CSS, HTML etc. And that's excluding all the common (yet sometimes complex) build/workflow tools like Webpack, Babel etc.
             However, I believe in tool agnostic skills. Being in an industry that moves at the speed of time, it sometimes doesn't matter what frameworks/tools I'm familiar with. Because tools/frameworks are so fickle these days that they can become obsolete within months! What matters more is how fast can I learn and make myself comfortable with newer technology. I believe I'm a quick learner. I prioritize concepts over techniques.
