Update Code , Image By A1S1cmd01

--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
         </div>
         <img src="/img/divider.svg" alt="divider" class="divider">
         <div class="about">
-          <a href="https://onepagelove.com/pranesh-ravi-2018" target="_blank">
-            <img src="https://s3.amazonaws.com/onepagelove/one-page-love-award-retina-right.png" alt="Ribbon" id="opl">
-          </a>
           <p class="intro">
             Hello, my name is
             <b>Arya Soni</b>. A passionate UI designer and a Full Stack developer from Delhi/Gurgaon, India.
@@ -104,166 +101,9 @@
             </div>
           </div>
         </div>
-<!--         <div class="projects">
-          <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project left">
-                <a href="https://github.com/praneshr/movie-n-tv" target="_blank">
-                  <div class="image m">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/mnt.png" alt="The Movie & TV">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">The Movie & TV</div>
-                  <div class="description">
-                    A modern Progressive Web App built on top of the TMDB API. You can see information like ratings, cast and etc of any movie,
-                    TV show. You can also view details about your favorite celebrities.
-                  </div>
-                </div>
-              </div>
-            </div> -->
-<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project right">
-                <a href="https://github.com/praneshr/crypto-info" target="_blank">
-                  <div class="image c">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/crypto.png" alt="Crypto Info">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Crypto Info</div>
-                  <div class="description">
-                    A simple Node CLI tool to display information related to cryptocurrencies. It uses the coinmarketcap API. You can check market
-                    details, price, price change and do price conversions.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-<!--           <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project left">
-                <a href="https://github.com/indix/formland" target="_blank">
-                  <div class="image r">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/formland.png" alt="React Forms">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Formland</div>
-                  <div class="description">
-                    A powerful, extensible, config based form generator for React. The idea of this project is to bring non Javascript developers and Javascript
-                    closer.
-                  </div>
-                </div>
-              </div>
-            </div> -->
-<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project right">
-                <a href="https://oss.indix.com" target="_blank">
-                  <div class="image i">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/oss.png" alt="Indix OSS">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Indix OSS</div>
-                  <div class="description">
-                    A place to showcase all the open source projects developed by the folks at Indix and to recognize all the contributors.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-<!--           <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project left">
-                <a href="https://dribbble.com/shots/3932225-Daily-UI-003" target="_blank">
-                  <div class="image p">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/pixel2.png" alt="Pixel 2 landing page">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Pixel 2 Landing Page</div>
-                  <div class="description">
-                    Concept for Pixel 2 website. A good mix of bold blue color and subtle pattern to bring
-                    a fancy yet minimal UI focusing on selling the product.
-                  </div>
-                </div>
-              </div>
-            </div> -->
-<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project right">
-                <a href="https://dribbble.com/shots/3977109-Daily-UI-018-Analytics-Chart" target="_blank">
-                  <div class="image h">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/health.png" alt="Health App">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Health App</div>
-                  <div class="description">
-                    Redesigned Apple health app. A minimal UI design with a bold typeface to improve accessibility.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-<!--           <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project left">
-                <a href="https://dribbble.com/shots/4562145-Statement" target="_blank">
-                  <div class="image statements">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/statements.png" alt="Statement">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Statement</div>
-                  <div class="description">
-                    Webapp concept where you can check your online spendings in detail. Provided
-                    with historical data and much more, you'll be able to track your spendings
-                    and make decisions.
-                  </div>
-                </div>
-              </div>
-            </div> -->
-<!--             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-              <div class="project right">
-                <a href="https://dribbble.com/shots/4547975-Enai-Noki-Paayum-Data" target="_blank">
-                  <div class="image e">
-                    <div class="hover">
-                      Visit Project ⇾
-                    </div>
-                    <img src="/img/enai.png" alt="Enai Noki Paayum Data">
-                  </div>
-                </a>
-                <div class="details">
-                  <div class="title">Enai Noki Paayum Data</div>
-                  <div class="description">
-                    Local swag made at Indix, mimicked from the movie <i>"Enai Noki Paayum Thota"</i>.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <img src="/img/divider.svg" alt="divider" class="divider">
+        
+        
+        <img src="/img/divider.svg" alt="divider" class="divider">
           <div class="row">
             <div class="col-xs-12">
               <div class="more">
@@ -278,13 +118,13 @@
     <div class="contact">
       <div class="container">
         <div class="footer">
-          <img src="/img/profile.jpg" alt="Profile">
+          <img src="/img/aryasoni.jpg" alt="Profile">
           <p class="credit">
             Designed and developed by Arya Soni
           </p>
           <p class="license">
             Hosted in Github Pages. Code is licensed under
-            <b>MIT</b> and available at <a href="https://github.com/praneshr/praneshr.github.io" target="_blank">Github</a>.
+            <b>MIT</b> and available at <a href="https://github.com/aryasoni98/aryasoni98.github.io" target="_blank">Github</a>.
             All images/graphics are licensed under <b>CC BY-SA</b>
           </p>
           <div class="copy">
