--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="details">
                   <div class="title">Happy Diwali</div>
                   <div class="description">
-                    Diwali is an occasion to ley the light of diyas and candles illuminate not just your home, but your life too...
+                    Diwali is an occasion to let the light of diyas and candles illuminate not just your home, but your life too...
                   </div>
                 </div>
               </div>
