--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div class="title">Happy Diwali</div>
                   <div class="description">
                     Diwali is an occasion to let the light of diyas and candles illuminate not just your home, but your life too...
-                    Github : https://github.com/aryasoni98/diwali2019 
+                    <a href="https://github.com/aryasoni98/diwali2019" target="_blank">Github</a>
                   </div>
                 </div>
               </div>
