--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
                   <div class="title">Programmer Challenge</div>
                   <div class="description">
                     Programmer Challenges | Coding
-
-🚀 Test your coding knowledge with daily challenges about Python, Java, JavaScript, PHP and C++
-
-Programmer Challenge is a website where you can store any text online for easy sharing. The idea behind the site is to make it more convenient for people to share large amounts of text online.
+                    🚀 Test your coding knowledge with daily challenges about Python, Java, JavaScript, PHP and C++
+                     Programmer Challenge is a website where you can store any text online for easy sharing. 
+                    The idea behind the site is to make it more convenient for people to share large amounts of text online.
                   </div>
                 </div>
               </div>
