--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
               <div class="project right">
-                <a href="programmerchallenge.in" target="_blank">
+                <a href="https://programmerchallenge.in/" target="_blank">
                   <div class="image c">
                     <div class="hover">
                       Visit Project ⇾
