--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pranesh Ravi">
-    <meta name="description" content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix">
+    <meta name="description" content="Pranesh Ravi | UX Engineer at Google">
 
     <meta name="twitter:card" value="summary_large_image">
     <meta name="twitter:site" value="@pranesh_ravi">
     <meta name="twitter:creator" value="@pranesh_ravi">
     <meta name="twitter:title" content="Pranesh Ravi">
-    <meta name="twitter:description" content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix">
+    <meta name="twitter:description" content="Pranesh Ravi | UX Engineer at Google">
     <meta name="twitter:image" content="https://praneshravi.in/img/meta.png">
 
     <meta content="Pranesh Ravi" property="og:site_name">
     <meta content="Pranesh Ravi" property="og:title">
-    <meta content="Pranesh Ravi | UI Designer & Full Stack Developer at Indix" property="og:description">
+    <meta content="Pranesh Ravi | UX Engineer at Google" property="og:description">
     <meta content="website" property="og:type">
     <meta content="https://praneshravi.in" property="og:url">
     <meta content="https://praneshravi.in/img/meta.png" property="og:image" />
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#FFFFFF">
     <meta name="msapplication-navbutton-color" content="#FFFFFF">
     <meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF">
-    <title>Pranesh Ravi | UI Designer & Full Stack Developer</title>
+    <title>Pranesh Ravi | UX Engineer</title>
     <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
     <link rel="stylesheet" href="/dist/index.css">
     <script>
@@ -68,7 +68,7 @@
           </a>
           <p class="intro">
             Hello, my name is
-            <b>Pranesh</b>. A passionate UI designer and a Full Stack developer from Bengaluru, India.
+            <b>Pranesh</b>. A passionate UX Engineer from Bengaluru, India.
           </p>
           <p class="info">
             I have 4 years of experience in designing and building highly scalable web applications. I mostly work with JavaScript, React JS, Node JS,
