Update dribbble link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="row">
             <div class="col-xs-12">
               <a href="https://github.com/praneshr" id="git" target="_blank">Github</a>
-              <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble</a>
+              <a href="https://dribbble.com/praneshr/" id="dribbble" target="_blank">Dribbble</a>
               <a href="https://blog.praneshravi.in/" id="medium" target="_blank">Medium</a>
               <a href="https://stackoverflow.com/users/4945468/pranesh-ravi" id="so" target="_blank">Stackoverflow</a>
               <a href="https://www.linkedin.com/in/pranesh-ravi/" id="lki" target="_blank">LinkedIn</a>
@@ -254,7 +254,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="more">
-                More work on <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble ⇾</a> and
+                More work on <a href="https://dribbble.com/praneshr/" id="dribbble" target="_blank">Dribbble ⇾</a> and
                 <a href="https://github.com/praneshr?utf8=%E2%9C%93&tab=repositories&q=&type=public&language=" id="git" target="_blank">Github ⇾</a>
               </div>
             </div>
